--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,7 @@
 <div app-wave></div>
-<div id="monaco-background" app-fade-in [delay]="2500"></div>
+<div id="monaco-background" app-fade-in [delay]="2500">
+    <div id="background"></div>
+</div>
 <div class="block" id="first-block">
     <h1>The world is a campus.</h1>
     <p>
@@ -13,7 +15,7 @@
         We believe at <b>Twic</b> that &laquo;the world is a campus&raquo;.
     </p>
     <p>
-        <b>Monaco</b> is where our very internationally diverse team happens to be. While home to over <b>140 nationalities</b>, the 
+        <b>Monaco</b> is where our very internationally diverse team happens to be. While home to over <b>130 nationalities</b>, the 
         <b>Principality of Monaco</b> has for many years been working towards and promoting a better world, placing the 
         <b>United Nations Millenium Development Goals</b> at the heart of its foreign policy.
 </div>
