--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="block" app-fade-in>
     <p>
         <span class="blue"><b>*</b></span><b>Engagement</b> online is at <u>the heart of our product design</u>.<br class='desktop'/> 
-        This is why we have developped a technology combining a state-of-the-art <br class='desktop'/>
+        This is why we have developed a technology combining a state-of-the-art <br class='desktop'/>
         Learning Management System with 21st-Century social networking tools.
     </p>
     <button class="button" [routerLink]="['/product']">See Our Product<span class="chevron right"></span></button>
