--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -77,8 +77,8 @@
 
 <div class='block' id='try-our-product' app-fade-in>
     <p>
-        <b>You can try our product.</b><br/>
-        You can try <b>Twic</b> today. Start your free 30-dayntrial for one course !
+        <b>You can try Twic today.</b><br/>
+         Start your free 30-day trial for one course !
     </p>
     <button class='button' [routerLink]="['/contact-us']">
         Start free 30-day trial
