--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -2,7 +2,7 @@
 <div class="block" id="first-block">
     <h1>Higher Education in the 21st-Century.</h1>
     <p>
-        <b>Twic</b>, the power of <b>networked education</b> on a single Social Learning Environment... everywhere and anytime.
+        <b>Twic</b>, the power of <b>networked education</b> on a single Social Learning Environment... Everywhere and anytime.
     </p>
     
 </div>
@@ -34,8 +34,8 @@
         <div  class="column-block" [ngClass]="{ gray : productIndex === 3 }" (click)="changeProductNumber(3)">
             <b>Data collection</b>
             <p>
-               We use the latest forward-looking algorithms in human-technology 
-               tracking to measure Assurance of Learning and online engagement.
+               We use the latest forward-looking techniques in human-computer 
+               interaction, and sophisticated algorithms to measure online engagement.
             </p>
         </div>
     </div>
@@ -61,7 +61,7 @@
                     L.M.S enables to distribute online, blended courses over the internet as well as 
                     to augment on-campus teaching in a brick and mortar environment.</p>
                 <div class="carousel-image">
-                    <div class="product" id="product-1" ></div>
+                    <img src="assets/images/lms_screen.jpg" class="product"/>
                 </div>
             </div>
             
@@ -72,7 +72,7 @@
                     collaborative learning experience for students and faculty across the world.
                 </p>
                 <div class="carousel-image">
-                    <div class="product" id="product-2" ></div>
+                    <img src="assets/images/lms_screen_editor.jpg" class="product"/>
                 </div>
             </div>
             <div  carousel-page class="column-block">
@@ -82,7 +82,7 @@
                    needing to open another app or share invite links.
                 </p>
                 <div class="carousel-image">
-                    <div class="product" id="product-3" ></div>
+                    <img src="assets/images/lms_screen_visio.jpg" class="product"/>
                 </div>
             </div>
             <div  carousel-page class="column-block">
@@ -93,7 +93,7 @@
                   to measure online engagement.
                 </p>
                 <div class="carousel-image">
-                    <div class="product" id="product-4" ></div>
+                    <img src="assets/images/lms_screen_data.jpg" class="product"/>
                 </div>
             </div>
         </div>
