--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -161,17 +161,23 @@
     }
 }
 
+@{deep} .carousel-content{
+    p{
+        height : 14rem;
+    }
+}
 .carousel-image{
-    width : 100%;
-    height : 60rem;
     top : 0;
     position : relative;
     overflow : hidden;
     .product{
-        background-size: contain;
-        background-position: 50%;
-        top : 1rem;
+        position : initial;
+        max-width : 100%;
         height : 60rem;
+        @media(max-width : 520px){
+            height : 40rem;
+        }
+        
     }
 }
 
@@ -299,7 +305,7 @@
             line-height: 2.4rem;
         }
         p{
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             line-height: 2.6rem;
         }
     }
@@ -318,6 +324,9 @@
       #everywhere{
           margin-top: 0;            
       }   
+      [app-devices]{
+          margin : 8rem 0 !important;
+      }
 }
  @media(max-width: 479px){
     #everywhere{
