--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,13 +7,14 @@
     </div>
     <div class="footer-menu mobile dropdown" app-dropdown>
         <div class="dropdown-content">
-            <div [routerLink]="['/product']">See our Product</div>
+            <div [routerLink]="['/product']">Product</div>
             <div [routerLink]="['/pricing']">Pricing</div>
             <a target="_blank" href="http://help.twic.community">Support</a>
-            <div [routerLink]="['/about']">About</div>
+            <div *ngIf="isActive('/about')" (click)="reload()">About</div>
+            <div *ngIf="!isActive('/about')" [routerLink]="['/about']">About</div>
             <a target="_blank" href="https://itunes.apple.com/fr/app/twic-the-world-is-a-campus/id1165444530?l=en&mt=8">Download App IOS</a>
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.thestudnet.app">Download App Android</a>
-            <div>Status</div>
+            <div><a target="_blank" href="http://status.thestudnet.com/">Status</a></div>
             <div>
                 <img class="footer-logo" src="assets/images/Logo-white.svg"/>
                 <p>
@@ -22,7 +23,7 @@
             </div>
         </div>
         <div class="dropdown-toggle">
-            <div class="text">See our Product</div> <div class="chevron bottom"></div>
+            <div class="text">Product</div> <div class="chevron bottom"></div>
         </div>
         
     </div>
@@ -37,7 +38,8 @@
     <div class="footer-column desktop">
         <div class="footer-title">Twic</div> 
         <ul>
-            <li [routerLink]="['/about']">About</li>
+            <li *ngIf="isActive('/about')" (click)="reload()">About</li>
+            <li *ngIf="!isActive('/about')"  [routerLink]="['/about']">About</li>
             <li> <a target="_blank" href="https://itunes.apple.com/fr/app/twic-the-world-is-a-campus/id1165444530?l=en&mt=8">Download App IOS</a></li>
             <li> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.thestudnet.app">Download App Android</a></li>
             <li> <a target="_blank" href="http://status.thestudnet.com/">Status</a></li>
