Form validation sentence

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -30,6 +30,6 @@
 <div class="block processed-block" *ngIf="process" [ngClass]="{ animate : process }">
     <img src="assets/images/tick.svg"/>
     <p>
-        You will be contacted soon!
+        Thank you for Signing up! You will be contacted soon!
     </p>
 </div>
