--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -137,7 +137,9 @@
 
 :host @{deep} .schools{
     display: flex;
+    flex-direction: column;
     flex-wrap : wrap;
+    height : 28rem;
     .school{
         width : 20%;
         @media(max-width: 1023px){
