--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -30,6 +30,6 @@
 <div class="block processed-block" *ngIf="process" [ngClass]="{ animate : process }">
     <img src="assets/images/tick.svg"/>
     <p>
-        Thank you for Signing up! You will be contacted soon!
+        Your form was successfully submitted. Our Account Manager will be in touch within the next 12 hours !
     </p>
 </div>
