--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -76,8 +76,8 @@
         height : 6rem;
         bottom : 5.5rem;
         right : calc(~"50% - 5rem");
-        @{deep} .button{
-            display : none;
+        @{deep} .not-desktop{
+            display: none;
         }
     }
 }
@@ -185,8 +185,5 @@
         height: 7rem;
         width: 4rem;
         left: 5rem;
-        @{deep} .button{
-            display : none;
-        }
     }
 }
