--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -222,7 +222,7 @@
     }
     @media(max-width : 1023px){
         height : 60rem;
-        margin-top : 0;
+        margin : 0 0 4rem;
         [app-h2]{
             margin : 2rem 0 4rem;
         }
