--- a/src/app/shared/devices/window.component.less
+++ b/src/app/shared/devices/window.component.less
@@ -27,6 +27,10 @@
     0% { width : 0;  opacity : 0; margin-right : 2.1rem  }
     100% {  width : 4.2rem;  opacity : 1; margin-right : 0; }
 }
+@keyframes button-in-mobile {
+    0% { width : 0;  opacity : 0; margin-right : 2.1rem  }
+    100% {  width : 2rem;  opacity : 1; margin-right : 0; }
+}
 @keyframes darkgray-line-in {
     0% { width : 0;  opacity : 0; margin-left : 25%; }
     100% { width : 50%;  opacity : 1; margin-left : 0; }
@@ -80,7 +84,7 @@
     &.first{
         margin-bottom: 2rem;
         @media(max-width: 1023px){
-            margin-bottom : 1rem;
+            margin-bottom : 0.5rem;
         }
     }
     &.small{
@@ -118,5 +122,7 @@
     animation: button-in 500ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
     @media(max-width: 1023px){
         bottom : 0.5rem;
+        height : 0.8rem;
+        animation: button-in-mobile 500ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
     }
 }
