Devices responsive animation

--- a/src/app/shared/devices/window.component.html
+++ b/src/app/shared/devices/window.component.html
@@ -3,7 +3,7 @@
     <div class="circle" [ngStyle]="{ 'animation-delay' : (1000 + delay) + 'ms' }"></div>
     <div class="gray-line first" [ngStyle]="{ 'animation-delay' : (1100 + delay) + 'ms' }"></div>
     <div class="darkgray-line" [ngStyle]="{ 'animation-delay' : (1200 + delay) + 'ms' }"></div>
-    <div class="gray-line" [ngStyle]="{ 'animation-delay' : (1300 + delay) + 'ms' }"></div>
+    <div class="gray-line not-desktop" [ngStyle]="{ 'animation-delay' : (1300 + delay) + 'ms' }"></div>
     <div class="darkgray-line not-desktop" [ngStyle]="{ 'animation-delay' : (1400 + delay) + 'ms' }"></div>
     <div class="gray-line not-desktop" [ngStyle]="{ 'animation-delay' : (1500 + delay) + 'ms' }"></div>
     <div class="gray-line small not-desktop" [ngStyle]="{ 'animation-delay' : (1600 + delay) + 'ms' }"></div>
