--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -48,7 +48,7 @@
             & > div:last-of-type{
                 display : flex;
                 flex-direction : column;
-                padding : 1rem 0;
+                padding : 8rem 0 1rem;
                 text-align: center;
                 font-size: 1.4rem;
                 font-weight: 300;
@@ -65,6 +65,22 @@
         }
         @media(max-width : 1023px){
             flex-direction : column;
+        }
+        
+        
+        .mobile-footer{
+            margin : 0 auto;
+            display : flex;
+            a{
+               clear : both;
+               span{
+                    margin-right: 2rem;  
+               }
+                &:last-of-type > span{
+                    margin-right: 0 !important;
+                }
+            }
+            
         }
         
     }
@@ -89,7 +105,6 @@
             width : 100%;
         }
     }
-    
     .footer-title{
         font-size: 1.6rem;
         line-height: 2.2rem;
