--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -20,6 +20,12 @@
                 <p>
                     Copyright © 2017, Twic by THE STUDNET.
                 </p>
+                <div class="mobile-footer">
+                    <a href="mailto:contact@thestudnet.com"><span>Contact us</span></a>
+                    <a target="_blank" href="https://www.facebook.com/thestudnetinc"><span class="icon icon-facebook social-media"></span></a>
+                    <a target="_blank" href="https://twitter.com/thestudnet"><span class="icon icon-twitter social-media"></span></a>
+                    <a target="_blank" href="https://fr.linkedin.com/company/the-st-dnet"><span class="icon icon-linkedin2 social-media"></span></a>
+                </div>
             </div>
         </div>
         <div class="dropdown-toggle">
