--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -11,79 +11,49 @@
 <div class="block table-block" app-fade-in [delay]='1500'>
     <div class="table">
         <div class="white column">
-            <div class="title">Course</div>
+            <div class="title">0-200 users*</div>
             <div class="price">
-                <div class="euro">&euro;</div>
-                <div class="number">5</div>
-                <div class="k">K</div>
+                <span class="euro">8&euro;</span> / month / user
             </div>
             <div class="lines">
                 <div class="line">
-                    <b>1</b> course
-                </div>
-                <div class="line">
-                    <b>All</b> students enrolled
-                </div>
-                <div class="line">
-                    <b>Full</b> course duration
+                    12-month contract
                 </div>
             </div>
         </div>
         <div class="white column">
-            <div class="title">Program</div>
+            <div class="title">201-500 users*</div>
             <div class="price">
-                <div class="euro">&euro;</div>
-                <div class="number">50</div>
-                <div class="k">K</div>
+                <span class="euro">6&euro;</span> / month / user
             </div>
             <div class="lines">
                 <div class="line">
-                    <b>Unlimited</b> courses
-                </div>
-                <div class="line">
-                    <b>All</b> students enrolled
-                </div>
-                <div class="line">
-                    <b>Full</b> program duration
+                   12-month contract
                 </div>
             </div>
                 
         </div>
         <div class="gray column">
-            <div class="title">Institution</div>
+            <div class="title">+ 500 users*</div>
             <div class="price">
                 <div class="title">Contact us</div>
             </div>
             <div class="lines">
                 <div class="line">
-                    <b>Unlimited</b> courses and programs
-                </div>
-                <div class="line">
-                    <b>Total</b> enrollment
-                </div>
-                <div class="line">
-                    <b>3</b> years
+                    3-year contract
                 </div>
             </div>
                 
         </div>
     </div>
+    <i class="anotation">*Faculty, students or staff</i>
 </div>
 <div class="block" id="our-pricing" app-fade-in [delay]='1500'>
     <p>
-        Any question about <b>our pricing</b>? Feel free to <a href="mailto:contact@thestudnet.com"><b><u>contact us</u></b></a>, we're more than happy to help.
+        Our pricing includes all features, unlimited usage.
     </p>
 </div>
 
-<div class='block' id='try-our-product' app-fade-in>
-    <p>
-        <b>You can try Twic today.</b><br/>
-         Start your free 30-day trial for one course !
-    </p>
-    <button class='button' [routerLink]="['/contact-us']">
-        Start free 30-day trial
-    </button>
-</div>
 
 <div class='block' id='features' app-fade-in>
     <div app-h2>
@@ -97,4 +67,14 @@
         <ul><span class="icon icon-checkmark"></span>24/7 support (chat and hot line)</ul>
         <ul><span class="icon icon-checkmark"></span>Custom integration and branding</ul>
     </li>
+</div>
+
+<div class='block' id='try-our-product' app-fade-in>
+    <p>
+        <b>You can try Twic today.</b><br/>
+         Start your free 30-day trial for one course !
+    </p>
+    <button class='button' [routerLink]="['/contact-us']">
+        Start free 30-day trial
+    </button>
 </div>
