--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -21,6 +21,14 @@
 
 .table-block{
     display : flex;
+    position : relative;
+    padding-bottom: 3rem;
+    .anotation{
+        position : absolute;
+        right : 0;
+        bottom : 0;
+        font-size: 1.2rem;
+    }
 }
 .table{
     display : flex;
@@ -28,7 +36,7 @@
     margin : 1rem auto;
     .column{
         width : 30rem;
-        height : 34rem;
+        height : 30rem;
         @media(max-width: 1023px){
             width : 50%;
             .lines{
@@ -44,10 +52,17 @@
         color : @clr-text;
         border-radius: 0 2px 2px 0;
         .title{
-            font-size: 1.8rem;
+            font-size: 2.2rem;
             line-height: 2.6rem;
-            margin : 3rem 0;
+            margin : 4rem 0;
             font-weight: bold;
+        }
+        .price{                
+            padding : 3rem;
+            .euro{
+                font-size: 3rem;
+                padding-right: 1rem;
+            }
         }
         &.white{
             border: 1px solid #DEDEDE;
@@ -58,27 +73,20 @@
         }
         &.gray{
             margin-top : 1.5rem;
-            height : 32rem;
             background : @clr-darkgray;
+            height : 28.5rem;
             color : #FFF;
             .title{
-                margin : 1.5rem 0 3rem;
+                margin : 2.5rem 0 4rem;
             }
             .price{                
                 background : @clr-darkgray2;
-                .title{
-                    height : 10rem;
-                    margin : 0;
-                    line-height: 10rem;
-                }
+               
             }
             @media(max-width: 1023px){
                 box-shadow: inset 0px 8px 5px 0px rgba(217,217,217,0.15);
                 width : 100%;
                 margin-top : 0;
-                .title{
-                    margin : 2.25rem 0;
-                }
             }
         }
         
@@ -89,28 +97,7 @@
             flex-align : center;
             justify-content : center;
             background-color: @clr-gray;
-            .euro{
-                width: 1.5rem;
-                height: 2.6rem;
-                font-size: 2.6rem;
-                font-weight: bold;
-                line-height: 2.6rem;
-                margin-top : 3rem;
-            }
-            .number{
-                font-size: 5rem;
-                font-weight: bold;
-                line-height: 10rem;
-                text-align: center;
-            }
-            .k{
-                width: 1.5rem;
-                height: 2.6rem;
-                font-size: 2.6rem;
-                line-height: 2.6rem;
-                margin-top : 4.4rem;
-                font-weight: 300;
-            }
+        
             .title{
                 margin : auto 0;
             }
@@ -129,8 +116,8 @@
 }
 
 #our-pricing{
-    margin-bottom: 7rem;
     font-weight: 300;
+    line-height: 1rem;
     font-size: 1.6rem;
     a, a:visited{
         color : @clr-text;
