--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -61,6 +61,7 @@
             padding : 3rem;
             .euro{
                 font-size: 3rem;
+                font-weight: bold;
                 padding-right: 1rem;
             }
         }
