--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -36,7 +36,7 @@
         <div class="gray column">
             <div class="title">+ 500 users*</div>
             <div class="price">
-                <div class="title">Contact us</div>
+                <div class="title"><a href="mailto:contact@thestudnet.com">Contact us</a></div>
             </div>
             <div class="lines">
                 <div class="line">
