--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -33,8 +33,29 @@ form{
         display : block;
         margin : 2rem 0 1.5rem;
     }
-    input, input:required, input:invalid, input:valid, input:-webkit-autofill{
+    input, input:required, input:invalid, input:valid{
         border-radius: 2px;
+        height : 5rem;
+        width : 100%;
+        background-color: #F7F7F7 !important;
+        border: 1px solid #D7D7D7;
+        font-size: 1.5rem;
+        padding : 1.5rem 2rem;
+        outline : none;
+        &:focus {
+            background-color: #FFF !important;
+            border: 1px solid #C3C3C3;
+            box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
+        }
+        &[type=password]{
+            color: #8A8A8A;
+            padding: 0.5rem 2rem;
+            font-size: 3rem;
+        }
+    }
+    
+    input:-webkit-autofill{
+          border-radius: 2px;
         height : 5rem;
         width : 100%;
         background-color: #F7F7F7 !important;
