--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -77,6 +77,9 @@
             background : @clr-darkgray;
             height : 28.5rem;
             color : #FFF;
+            a, a:visited, a:hover{
+                color : #FFF;
+            }
             .title{
                 margin : 2.5rem 0 4rem;
             }
