--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -3,7 +3,7 @@
     <h1>Transparent pricing.</h1>
     <p>
         Whatever the plan, <b>Twic</b> is a no-brainer.<br/>
-        An all inclusive transparent flat-fee.
+        An all inclusive approach. No hidden fees.
     </p>
     
 </div>
@@ -72,7 +72,7 @@
 <div class='block' id='try-our-product' app-fade-in>
     <p>
         <b>You can try Twic today.</b><br/>
-         Start your free 30-day trial for one course !
+         Start your free 30-day trial !
     </p>
     <button class='button' [routerLink]="['/contact-us']">
         Start free 30-day trial
