--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
 <div class="block small-text" app-fade-in>
     THEY TRUST US
 </div>
-<div app-carousel app-fade-in  (window:resize)="onResize($event)" [ratio]="0.8" [time]="[15000, 10000]" >
+<!--<div app-carousel app-fade-in  (window:resize)="onResize($event)" [ratio]="0.8" [time]="[15000, 10000]" >
     <div carousel-page *ngFor="let page of pages">
          <div class="schools">
             <div class="school" *ngFor="let school of page">
@@ -37,5 +37,17 @@
             </div>
         </div>
     </div>
+</div>-->
+<div id="gnam"></div>
+<div id="gnam-desc">
+    <b>Multiply connections, build global capabilities, exceed boundaries.</b>
+    <br/>
+    <br/>
+    The Global Network for Advanced Management includes 29 leading business schools from diverse regions, countries, cultures, and
+    economies in different phases of development.
+    <br/>
+    <br/>
+    Leveraging network efficiencies, utilizing new technologies, building strong institutional and personal relationships, the Global Network is
+    having a transformational effect on students, member schools, management education, and beyond.
 </div>
        
