--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -35,7 +35,7 @@
     max-width : 80rem;
     margin-bottom: 5rem;
     color: @clr-text;
-    @media(max-width : 1023px){
+    @media(max-width : 1099px){
         margin-top : 0rem;
         margin-bottom: 3.3rem;
     }
@@ -45,37 +45,40 @@
     margin-top: 15rem;
     margin-bottom: 15rem;
     display : flex;
-    @media(max-width : 1023px){
+    @media(max-width : 1099px){
         display : block;
         margin-top: 8.5rem;
         margin-bottom: 6.5rem;
     }
     
     .portrait{
-        background-image: url("assets/images/maxresdefault.jpg");
-        background-position: 80% 50%;
+        background: url("assets/images/home.png") no-repeat center;    
+        background-position: 50% -300%;
         background-size: cover;
-        height : 55rem;
-        width : 55rem;
-        box-shadow: 0 1px 5px 0 rgba(0,0,0,0.5);
+        background-color : #FFF;
+        height : 38rem;
+        width : 54rem;
+        max-width: calc(~"100% - 12rem");
+        border : solid 1px #ececec;
         border-radius: 4px;
         z-index: 1;
-        @media(max-width : 1023px){
+        @media(max-width : 1099px){
             height : 24rem;
-            width : 40%;
             position: absolute;
-            left: 30%;
-            background-position: 70% 50%;
+            left: calc(~"50% - 27rem");
+            background-position: 50% 25%;
         }
-
+        @media(max-width : 660px){
+            left: 6rem;
+        }
     }
     
     .citation{
-        margin-top : 6rem;
+        margin-top : 4rem;
         position : relative;
         background: linear-gradient(203.37deg, #EEEEEE 0%, #FFFFFF 60%);
         padding : 8rem 2rem 2rem 6rem;
-        @media(max-width : 1023px){
+        @media(max-width : 1099px){
             padding : 24rem 2rem 0;
         }
         border-radius: 4px;
@@ -88,7 +91,7 @@
             text-align: left;
             position : relative;
             margin : 2rem 0 1rem;
-            @media(max-width : 1023px){
+            @media(max-width : 1099px){
                 text-align : center;
             }
         }
@@ -100,7 +103,7 @@
         line-height: 6rem;
         text-align: left;
         letter-spacing: 0.5rem;
-        @media(max-width : 1023px){
+        @media(max-width : 1099px){
             text-align : center;
         }
         @media(max-width : 479px){
@@ -120,18 +123,20 @@
 
 .quote{
     font-family: Merriweather;
-    font-size: 80px;
+    font-size: 8rem;
     font-weight: 900;
     line-height: 101px;
     opacity : 0.5;
     position : absolute;
     left : 3rem;
     top : -3rem;
-    @media(max-width : 1023px){
-        left : calc(~"70% + 4rem");
+    @media(max-width : 1099px){
+        left: 6rem;
+        top : 20rem;
     }
      @media(max-width : 479px){
-        left : calc(~"70% + 1rem");
+        left: 2rem;
+        font-size : 6rem;
     }
 }
 
@@ -142,7 +147,7 @@
     height : 28rem;
     .school{
         width : 20%;
-        @media(max-width: 1023px){
+        @media(max-width: 1099px){
             width : 33%;
         }
         @media(max-width: 768px){
@@ -164,9 +169,23 @@
     
 }
 
+#gnam{
+    background: url("assets/images/GNAM.svg") no-repeat center;
+    height : 4rem;
+    width : 100%;
+    margin : 6rem auto 8rem ;
+}
+#gnam-desc{
+    line-height: 2.5rem;
+    padding : 0 4rem;
+    margin-bottom : 8rem;
+    font-style : italic;
+    font-size: 1.6rem;
+}
+
 :host @{deep} .carousel-pagination{
     margin : 7.5rem auto 13rem auto !important;
-    @media(max-width: 1023px){
+    @media(max-width: 1099px){
         margin : 7.5rem auto !important;
     }
     @media(max-width: 479px){
