--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -56,13 +56,22 @@
             line-height: 2.6rem;
             margin : 4rem 0;
             font-weight: bold;
+            height: 4rem;
         }
         .price{                
             padding : 3rem;
+            @media(max-width: 479px){
+                    padding : 2rem;
+                }
             .euro{
                 font-size: 3rem;
                 font-weight: bold;
                 padding-right: 1rem;
+                
+                @media(max-width: 479px){
+                    font-size : 2rem;
+                    padding-right : 0;
+                }
             }
         }
         &.white{
@@ -121,7 +130,7 @@
 
 #our-pricing{
     font-weight: 300;
-    line-height: 1rem;
+    line-height: 1.6rem;
     font-size: 1.6rem;
     a, a:visited{
         color : @clr-text;
@@ -155,7 +164,7 @@
     
     
     @media(max-width: 479px){
-        margin-bottom: 0;
+        margin-bottom: 1rem;
         height : 23rem;
     }
     p{
