--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
 <h1>The Social Learning Environment<span class="blue"><b>*</b></span> for <span class="no-break">B-Schools.</span></h1>
 <div class="block" app-fade-in>
     <p>
-        <span class="blue"><b>*</b></span><b>Engagement</b> online is at <u>the heart of our product design</u>.<br class='desktop'/> 
-        This is why we have developed a technology combining a state-of-the-art <br class='desktop'/>
-        Learning Management System with 21st-Century social networking tools.
+        <span class="blue"><b>*</b></span><b>Engagement</b> is <u>the key in a digital environment</u>.<br class='desktop'/> 
+        This is why we have designed a technology combining an intuitive <br class='desktop'/>
+        Learning Management System with 21st-Century social networking features.
     </p>
     <button class="button" [routerLink]="['/product']">See Our Product<span class="chevron right"></span></button>
 </div>
@@ -38,12 +38,12 @@
         </div>
     </div>
 </div>-->
-<div id="gnam"></div>
-<div id="gnam-desc">
+<div id="gnam" app-fade-in></div>
+<div id="gnam-desc" app-fade-in>
     <b>Multiply connections, build global capabilities, exceed boundaries.</b>
     <br/>
     <br/>
-    The Global Network for Advanced Management includes 29 leading business schools from diverse regions, countries, cultures, and
+    Founded by Yale School of Management, the Global Network for Advanced Management includes 29 leading business schools from diverse regions, countries, cultures, and
     economies in different phases of development.
     <br/>
     <br/>
