--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -152,6 +152,8 @@
     }
     &#product-2{
         background-image: url("assets/images/lms_social.jpg");
+        background-size: contain;
+        border : solid 5px #EEE;
     }
     &#product-3{
         background-image: url("assets/images/lms_screen_visio.jpg");
@@ -271,8 +273,8 @@
     }
     .planetarium-block{
         width : 100%;
-        max-width: 40rem;
-        min-height: 20rem;
+        max-width: 47rem;
+        min-height: 19rem;
         padding: 2rem;
         opacity : 0;
         animation : planetarium-block 2s forwards;
