--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -71,10 +71,10 @@
 
 <div class='block' id='try-our-product' app-fade-in>
     <p>
-        <b>You can try Twic today.</b><br/>
-         Start your free 30-day trial !
+        <b>Try Twic for free</b><br/>
+         No credit card required.
     </p>
     <button class='button' [routerLink]="['/contact-us']">
-        Start free 30-day trial
+        Start your free trial
     </button>
 </div>
