--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
 <div class="block" id="first-paragraph" app-fade-in [delay]="2000">
     <p>
         In a more than ever connected world, we believe that innovation drives value creation through platforms, people and technology. <br/>
-        We believe at <b>Twic</b> that &laquo;the world is a campus&raquo;.
+        We at <b>Twic</b> believe  that &laquo;the world is a campus&raquo;.
     </p>
     <p>
         <b>Monaco</b> is where our very internationally diverse team happens to be. While home to over <b>130 nationalities</b>, the 
