--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -170,7 +170,7 @@
 }
 
 #gnam{
-    background: url("assets/images/GNAM.svg") no-repeat center;
+    background: url("assets/images/GNAM_logo.png") no-repeat center;
     height : 4rem;
     width : 100%;
     margin : 6rem auto 8rem ;
