--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div app-wave></div>
 <div class="block" id="first-block">
-    <h1>Start your free 30-day trial.</h1>
+    <h1>Start your free trial.</h1>
     <p>
         No <b>credit card</b> required.
     </p>
