--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -171,9 +171,13 @@
 
 #gnam{
     background: url("assets/images/GNAM_logo.png") no-repeat center;
+    background-size: contain;
     height : 4rem;
     width : 100%;
     margin : 6rem auto 8rem ;
+    @media(max-width:600px){
+        height : 3rem;
+    }
 }
 #gnam-desc{
     line-height: 2.5rem;
