--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -153,7 +153,7 @@
     &#product-2{
         background-image: url("assets/images/lms_social.jpg");
         background-size: contain;
-        border : solid 5px #EEE;
+        border : solid 1rem #EEE;
     }
     &#product-3{
         background-image: url("assets/images/lms_screen_visio.jpg");
