--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -60,11 +60,11 @@
         All features
     </div>
     <li>
-        <ul><span class="icon icon-checkmark"></span>State-of-the-art Learning Management System</ul>
-        <ul><span class="icon icon-checkmark"></span>Collaborative learning and social networking tools</ul>
+        <ul><span class="icon icon-checkmark"></span>Intuitive Learning Management System</ul>
+        <ul><span class="icon icon-checkmark"></span>Collaborative learning and social networking features</ul>
         <ul><span class="icon icon-checkmark"></span>Videoconferencing system</ul>
         <ul><span class="icon icon-checkmark"></span>Data collection and graphic analytics</ul>
-        <ul><span class="icon icon-checkmark"></span>24/7 support (chat and hot line)</ul>
+        <ul><span class="icon icon-checkmark"></span>24/7 support (chat and hotline)</ul>
         <ul><span class="icon icon-checkmark"></span>Custom integration and branding</ul>
     </li>
 </div>
