--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -57,7 +57,7 @@
                 <b>Learning Management System</b>
                 <p>
                     We are committed to being on the cutting edge of
-                    innovation in higher education. Our state-of-the-art
+                    innovation in higher education. Our intuitive
                     L.M.S enables to distribute online, blended courses over the internet as well as 
                     to augment on-campus teaching in a brick and mortar environment.</p>
                 <div class="carousel-image">
