--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -43,7 +43,7 @@
 
 .citation-block{
     margin-top: 15rem;
-    margin-bottom: 15rem;
+    margin-bottom: 10rem;
     display : flex;
     @media(max-width : 1099px){
         display : block;
@@ -183,8 +183,20 @@
     line-height: 2.5rem;
     padding : 0 4rem;
     margin-bottom : 8rem;
-    font-style : italic;
     font-size: 1.6rem;
+    b{
+        margin-bottom: 0.5rem;
+        display: inline-block;
+    }
+    p{
+        margin-bottom: 1rem;
+        max-width: 100%;
+        text-align: left;
+    }
+    @media(max-width:600px){
+        padding : 0 2rem;
+    }
+    
 }
 
 :host @{deep} .carousel-pagination{
