--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -21,7 +21,7 @@
             <b>Social networking features</b>
             <p>
                 Our disruptive technology allows to create a connected, engaged and 
-                collaborative learning experience for students and faculty across the world.
+                collaborative learning experience for students and faculty inside and outside the classroom.
             </p>
         </div>
         <div  class="column-block" [ngClass]="{ gray : productIndex === 2 }" (click)="changeProductNumber(2)">
@@ -69,7 +69,7 @@
                 <b>Social networking tools</b>
                 <p>
                     Our disruptive technology allows to create a connected, engaged and 
-                    collaborative learning experience for students and faculty across the world.
+                    collaborative learning experience for students and faculty inside and outside the classroom.
                 </p>
                 <div class="carousel-image">
                     <img src="assets/images/lms_social.jpg" id="product-2" class="product"/>
