--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -66,7 +66,7 @@
             </div>
             
             <div  carousel-page class="column-block">
-                <b>Social networking tools</b>
+                <b>Social networking features</b>
                 <p>
                     Our disruptive technology allows to create a connected, engaged and 
                     collaborative learning experience for students and faculty inside and outside the classroom.
