--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,8 +21,8 @@
                 </p>
                 <div class="mobile-footer">
                     <a href="mailto:contact@thestudnet.com"><span>Contact us</span></a>
-                    <a target="_blank" href="https://www.facebook.com/thestudnetinc"><span class="icon icon-facebook social-media"></span></a>
-                    <a target="_blank" href="https://twitter.com/thestudnet"><span class="icon icon-twitter social-media"></span></a>
+                    <a target="_blank" href="https://www.facebook.com/TwicSLE/"><span class="icon icon-facebook social-media"></span></a>
+                    <a target="_blank" href="https://twitter.com/TwicSLE"><span class="icon icon-twitter social-media"></span></a>
                     <a target="_blank" href="https://fr.linkedin.com/company/the-st-dnet"><span class="icon icon-linkedin2 social-media"></span></a>
                 </div>
             </div>
@@ -52,8 +52,8 @@
    
     <div class="footer-column desktop">
         <div class="footer-title"><a href="mailto:contact@thestudnet.com">Contact us</a></div>
-        <a target="_blank" href="https://www.facebook.com/thestudnetinc"><span class="icon icon-facebook social-media"></span></a>
-        <a target="_blank" href="https://twitter.com/thestudnet"><span class="icon icon-twitter social-media"></span></a>
+        <a target="_blank" href="https://www.facebook.com/TwicSLE/"><span class="icon icon-facebook social-media"></span></a>
+        <a target="_blank" href="https://twitter.com/TwicSLE"><span class="icon icon-twitter social-media"></span></a>
         <a target="_blank" href="https://fr.linkedin.com/company/the-st-dnet"><span class="icon icon-linkedin2 social-media"></span></a>
     </div>
 </div>
